--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0-beta2",
     "properties-reader": "^0.3.1",
+    "showdown": "^1.9.0",
     "uuid": "^3.3.2",
     "vue": "^2.6.10"
   }
