--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ lib/connection.properties
 
 # Auth config
 api/auth/config.js
-id_rsa
 
-test_methods\.js
+# Local testing files
+id_rsa
+test_methods.js
