--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "arraylist": "^0.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.3.0-beta2",
+    "mongodb": "^3.3.0",
     "properties-reader": "^0.3.1",
     "uuid": "^3.3.2",
     "vue": "^2.6.10"
